syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "google/protobuf/wrappers.proto";
import "internal/app/grpc/proto/requests.proto";

service CompetitionService {
    rpc ListCompetitions(CompetitionRequest) returns (stream Competition) {}
}


message Competition {
    int64 id = 1;
    string name = 2;
    google.protobuf.BoolValue is_cup = 3;
}
